# llvm-plugin-rs

./: .cz.toml  .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  committed.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-pr.yml  lint.yml  linux.yml  macos.yml  release.yml  windows.yml
ci/windows/: llvm-10.patch  llvm-11.patch  llvm-12.patch  llvm-13.patch  llvm-14.patch
examples/: README.md  hello_world.rs  inject_printf.rs  opcode_counter.rs  static_call_counter.rs  strings.rs
llvm-plugin/: Cargo.toml  build.rs
llvm-plugin-macros/: Cargo.toml
llvm-plugin-macros/src/: lib.rs
llvm-plugin/cpp/: .clang-format  .clang-tidy  analysis.hh  common.hh  ffi.cc  pass.hh
llvm-plugin/src/: analysis.rs  ffi.rs  lib.rs  pass_builder.rs  pass_manager.rs  utils.rs
tests/: test.ll
tests/plugins/: Cargo.toml
tests/plugins/plugin1/: Cargo.toml
tests/plugins/plugin1-lld/: Cargo.toml
tests/plugins/plugin1-lld/src/: lib.rs
tests/plugins/plugin1/src/: lib.rs
tests/plugins/plugin2/: Cargo.toml
tests/plugins/plugin2/src/: lib.rs
tests/plugins/plugin3/: Cargo.toml
tests/plugins/plugin3/src/: lib.rs
tests/plugins/plugin4/: Cargo.toml
tests/plugins/plugin4/src/: lib.rs
tests/plugins/plugin5/: Cargo.toml
tests/plugins/plugin5/src/: lib.rs
tests/plugins/plugin6/: Cargo.toml
tests/plugins/plugin6/src/: lib.rs
tests/plugins/plugin7/: Cargo.toml
tests/plugins/plugin7/src/: lib.rs
tests/test-rust/: Cargo.toml
