[package]
name = "llvm-plugin"
version = "0.1.0"
authors = ["James Smith <jamesmth@proton.me>"]
categories = ["development-tools::ffi"]
description = "A wrapper for easily implementing out-of-source-tree LLVM plugins in Rust."
documentation = "https://docs.rs/llvm_plugin/"
edition = "2021"
keywords = ["llvm", "pass", "safe", "wrapper"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesmth/llvm-plugin-rs"

[package.metadata.docs.rs]
features = ["llvm11-0"] # any version >10 will do

[features]
default = ["macros"]
macros = ["llvm-plugin-macros"]

llvm10-0 = ["inkwell/llvm10-0-no-llvm-linking"]
llvm11-0 = ["inkwell/llvm11-0-no-llvm-linking"]
llvm12-0 = ["inkwell/llvm12-0-no-llvm-linking"]
llvm13-0 = ["inkwell/llvm13-0-no-llvm-linking"]
llvm14-0 = ["inkwell/llvm14-0-no-llvm-linking"]

[dependencies]
inkwell = { package = "llvm-plugin-inkwell", version = "0.1", features = ["internal-getters"] }
llvm-plugin-macros = { path = "../llvm-plugin-macros", version = "0.1", optional = true }

[build-dependencies]
cc = "1"
lazy_static = "1"
regex = "1"
semver = "1"
