[package]
name = "plugin4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
llvm10-0 = ["llvm-plugin/llvm10-0"]
llvm11-0 = ["llvm-plugin/llvm11-0"]
llvm12-0 = ["llvm-plugin/llvm12-0"]
llvm13-0 = ["llvm-plugin/llvm13-0"]
llvm14-0 = ["llvm-plugin/llvm14-0"]

[dependencies]
llvm-plugin = { path = "../../../llvm-plugin" }
